--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/ihsan6133/filte.git"
   },
   "author": "Ihsan",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ihsan6133/filte/issues"
   },
